docs(api): add types for settings
